add mobile menu state

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,12 @@
   --gold: rgba(255, 227, 115, 1);
   --white: rgba(255, 255, 255, 1);
   --black: rgba(0, 0, 0, 1);
+  --black-zero: rgba(0, 0, 0, 0);
+  --black-twenty: rgba(0, 0, 0, 0.2);
+  --red: rgba(253, 94, 83, 1);
+  --grey: rgba(200, 200, 200, 1);
+  --grey-zero: rgba(200, 200, 200, 0);
+  --grey-fifty: rgba(200, 200, 200, 0.5);
   --transition-delay: 0.5s;
   --transition-delay-step: 0.15s;
   --cubic: cubic-bezier(0.19, 1, 0.22, 1);
