--- a/src/containers/Header/Hamburger/Hamburger.scss
+++ b/src/containers/Header/Hamburger/Hamburger.scss
@@ -1,47 +1,3 @@
-// The hamburger menu overlay
-.overlay {
-  height: 0;
-  width: 100%;
-  position: fixed;
-  z-index: 3;
-  left: 0;
-  top: 0;
-  background-color: rgb(255, 255, 255);
-  background-color: rgba(255, 255, 255, 0.95);
-  overflow: hidden;
-  transition: 1s; // used for height/width expansion transition
-}
-
-// Position the content inside the overlay
-.overlay-content {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  text-align: left;
-}
-
-// The navigation links inside the overlay
-.overlay a {
-  padding: 8px;
-  text-decoration: none;
-  font-size: 3.5em;
-  line-height: 1em;
-  font-weight: 800;
-  color: var(--black);
-  &:hover,
-  &:focus {
-    color: var(--orange);
-  }
-}
-
-// When the height of the screen is less than 450 pixels, change the font-size of the links so they don't overlap
-@media screen and (max-height: 450px) {
-  .overlay a {
-    font-size: 20px;
-  }
-}
-
 .menu-icon {
   position: absolute;
   top: 0px;
@@ -111,17 +67,17 @@
   background: var(--orange);
 }
 
-.menu-icon.active .hamburger {
+.menu-icon.menu-open .hamburger {
   background: var(--black-zero);
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0);
 }
 
-.menu-icon.active .hamburger:before {
+.menu-icon.menu-open .hamburger:before {
   transform: rotate(405deg);
   top: 0;
 }
 
-.menu-icon.active .hamburger:after {
+.menu-icon.menu-open .hamburger:after {
   transform: rotate(-405deg);
   top: 0;
 }
