set delay for menu fade-in and intro slider appear

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,3 @@
-// defining variables - delays for the bars to animate - colors
-// $transition-delay: 0.5s;
-// $transition-delay-step: 0.15s;
-$cubic: cubic-bezier(0.19, 1, 0.22, 1);
-$border-width: 2px;
-// making the box shadow white for the black background but it doesnt look good so opacity is 0
-$shadow-one: 0 4px 12px 0 rgba(255, 255, 255, 0);
-
 //   colors
 $blue: rgba(4, 153, 255, 1);
 $purple: rgba(102, 51, 255, 1);
@@ -26,174 +18,9 @@ $grey-fifty: rgba(200, 200, 200, 0.5);
   min-height: 100vh; /* Fallback for browsers that do not support Custom Properties */
   min-height: calc(var(--vh, 1vh) * 100);
 }
-
-@media (min-width: 769px) {
-  .menu-items {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 20px auto;
-    transition: 1s;
-  }
-
-  .menu-items ul {
-    display: flex;
-  }
-
-  .menu-items li {
-    font-size: 1.75rem;
-    font-family: Roboto;
-    padding: 0px 10px;
-    transition: 1s;
-    cursor: pointer;
-  }
-
-  // Menu animation
-
-  .menuAnimation {
-    overflow: hidden;
-    position: relative;
-    // box-shadow: $shadow-one; commented out because of black background
-    &:hover {
-      box-shadow: $shadow-one;
-      transform: translateY(-2px);
-    }
-
-    // line animations apply to immediate first span
-    &:before,
-    &:after,
-    > a:before,
-    > a:after {
-      content: '';
-      position: absolute;
-      display: block;
-    }
-
-    // left and right lines
-    &:before,
-    > a:before {
-      width: $border-width;
-      height: 0;
-    }
-    // left line
-    &:before {
-      top: 0;
-      left: 0;
-      background: linear-gradient(to bottom, $gold 0%, $orange 50%, $red 100%);
-    }
-    // right line
-    > a:before {
-      bottom: 0;
-      right: 0;
-      background: linear-gradient(to top, $gold 0%, $orange 50%, $red 100%);
-    }
-    // top and bottom lines
-    &:after,
-    > a:after {
-      height: $border-width;
-      width: 0;
-    }
-    // top line
-    &:after {
-      top: 0;
-      left: 0;
-      background: linear-gradient(to right, $gold 0%, $orange 50%, $red 100%);
-    }
-    // bottom line
-    > a:after {
-      bottom: 0;
-      right: 0;
-      background: linear-gradient(to left, $gold 0%, $orange 50%, $red 100%);
-    }
-    // animate lines on hover
-    &:hover {
-      &:before,
-      > a:before,
-      &:after,
-      > a:after {
-        transition: $cubic 1s;
-      }
-      // left line
-      &:before {
-        animation: to-bottom $cubic 1s 0.05s forwards;
-      }
-      // right line
-      > a:before {
-        animation: to-top $cubic 1s 0.1s forwards;
-      }
-      // top line
-      &:after {
-        animation: to-right $cubic 1s 0.15s forwards;
-      }
-      // bottom line
-      > a:after {
-        animation: to-left $cubic 1s 0.2s forwards;
-      }
-    }
-    &:hover:before,
-    &:hover > a:before {
-      height: 100%;
-    }
-    &:hover:after,
-    &:hover > a:after {
-      width: 100%;
-    }
-  }
-
-  @keyframes to-bottom {
-    to {
-      transform: translateY(100%);
-    }
-  }
-  @keyframes to-top {
-    to {
-      transform: translateY(-100%);
-    }
-  }
-  @keyframes to-left {
-    to {
-      transform: translateX(-101%);
-    }
-  }
-  @keyframes to-right {
-    to {
-      transform: translateX(101%);
-    }
-  }
-
-  .menu-items a {
-    text-decoration: none;
-    color: $white;
-    font-weight: 800;
-    transition: 1s;
-  }
-
-  // adding menu hover underline
-  .underlineAnimation {
-    position: relative;
-  }
-
-  .underlineAnimation:after {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 2px;
-    display: block;
-    margin-top: 5px;
-    right: 0;
-    background: -webkit-linear-gradient(right, $orange, $gold);
-    transition: width 0.3s ease;
-    -webkit-transition: width 0.3s ease;
-  }
-
-  .underlineAnimation:hover:after {
-    width: 100%;
-    left: 0;
-    background: -webkit-linear-gradient(right, $orange, $gold);
-  }
-
-  li a {
-    transition-duration: 1s;
-    transition-property: opacity;
-  }
+.visible {
+  opacity: 1;
+}
+.not-visible {
+  opacity: 0;
 }
