--- a/src/components/Intro/Intro.module.scss
+++ b/src/components/Intro/Intro.module.scss
@@ -1,31 +1,28 @@
 .Intro {
   position: relative;
-  top: 40vh;
+  top: 35vh;
   left: 50%;
   text-align: center;
   transform: translate3d(-50%, 0, 0);
 }
 
+.Intro span,
+.Intro li {
+  font-size: 3.25rem;
+  transition: font-size 0.3s ease-in-out;
+}
+
 .Intro span {
-  font-size: 2.5rem;
   color: var(--white);
 }
 
-.Intro li {
-  font-size: 2.5rem;
-  padding: 0;
-  margin: 0;
-  line-height: 1;
-  color: var(--orange);
-}
-
 .Intro ul {
-  /* visibility: hidden; */
   text-align: center;
   margin: 0 auto;
   position: relative;
   overflow: hidden;
   height: 45vh;
+  visibility: hidden;
 }
 
 .Intro li {
@@ -48,39 +45,55 @@
   -webkit-text-fill-color: transparent;
 }
 
-.Intro li.anim1 {
-  animation: cycle 15s linear infinite;
-  animation-delay: 2.8s;
-}
+// .Intro li.anim1 {
+//   animation: cycle 15s linear infinite;
+//   animation-delay: 2.8s;
+// }
 
-.Intro li.anim2 {
-  animation: cycle2 15s linear infinite;
-  animation-delay: 2.8s;
-}
+// .Intro li.anim2 {
+//   animation: cycle2 15s linear infinite;
+//   animation-delay: 2.8s;
+// }
 
-.Intro li.anim3 {
-  animation: cycle3 15s linear infinite;
-  animation-delay: 2.8s;
-}
+// .Intro li.anim3 {
+//   animation: cycle3 15s linear infinite;
+//   animation-delay: 2.8s;
+// }
 
-.Intro li.anim4 {
-  animation: cycle4 15s linear infinite;
-  animation-delay: 2.8s;
-}
+// .Intro li.anim4 {
+//   animation: cycle4 15s linear infinite;
+//   animation-delay: 2.8s;
+// }
 
-.Intro li.anim5 {
-  animation: cycle5 15s linear infinite;
-  animation-delay: 2.8s;
-}
+// .Intro li.anim5 {
+//   animation: cycle5 15s linear infinite;
+//   animation-delay: 2.8s;
+// }
 
-.Intro:hover li {
-  animation-play-state: paused;
-}
+// .Intro:hover li {
+//   animation-play-state: paused;
+// }
 
 @media (min-width: 400px) {
   .Intro span,
   .Intro li {
-    font-size: 3rem;
-    font-weight: 400;
+    font-size: 4rem;
   }
 }
+
+@media (min-width: 769px) {
+  .Intro {
+    top: 25vh;
+  }
+  .Intro span,
+  .Intro li {
+    font-size: 6rem;
+  }
+}
+
+// @media (min-width: 1025px) {
+//   .Intro span,
+//   .Intro li {
+//     font-size: 8rem;
+//   }
+// }
