--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -4,10 +4,8 @@
   right: 0;
   position: relative;
   z-index: 2;
-  // display: flex;
-  // justify-content: space-evenly;
+  opacity: 0;
   transition: opacity 2s linear;
-  // background: var(--black);
 }
 
 @media (min-width: 769px) {
@@ -17,6 +15,6 @@
     display: flex;
     justify-content: space-evenly;
     transition: opacity 2s linear;
-    background: var(--black-twenty);
+    background: var(--black-zero);
   }
 }
