--- a/src/containers/Header/Menu/Menu.scss
+++ b/src/containers/Header/Menu/Menu.scss
@@ -1,3 +1,6 @@
+// $shadow-one: 0 4px 12px 0 rgba(255, 255, 255, 0);
+$cubic: cubic-bezier(0.19, 1, 0.22, 1);
+
 .navigation-menu {
   opacity: 1;
   display: inline-flex;
@@ -30,13 +33,14 @@
   flex-direction: column;
   width: 100%;
   text-align: left;
+  padding: 10px;
 }
 
 // The navigation links inside the overlay
-.overlay a {
+.overlay-content a {
   padding: 8px;
   text-decoration: none;
-  font-size: 3.5em;
+  font-size: 4.5em;
   line-height: 1em;
   font-weight: 800;
   color: var(--black);
@@ -46,175 +50,183 @@
   }
 }
 
+@media (min-width: 370px) {
+  .overlay-content {
+    padding: 0px 10px;
+  }
+  .overlay-content a {
+    font-size: 5.5rem;
+  }
+}
+
 // When the height of the screen is less than 450 pixels, change the font-size of the links so they don't overlap
 @media screen and (max-height: 450px) {
-  .overlay a {
+  .overlay-content a {
     font-size: 20px;
   }
 }
 
 @media (min-width: 769px) {
-  .desktop-nav a {
-    color: var(--white);
-    text-decoration: none;
-    padding: 0px 20px;
-    font-size: 2rem;
-    font-weight: 700;
-    transition: font-size 0.3s ease-in-out;
+  .desktop-nav {
+    display: flex;
+    li {
+      display: flex;
+      padding: 10px 20px;
+      transition: transform 0.3s ease-in-out;
+      // line-height: 1.4;
+      a {
+        display: flex;
+        // padding: 10px 0px;
+        color: var(--white);
+        text-decoration: none;
+        // line-height: 1.2;
+        font-size: 2rem;
+        font-weight: 700;
+        transition: font-size 0.3s ease-in-out;
+      }
+    }
+  }
+
+  // Menu animation
+
+  .underline-animation {
+    overflow: hidden;
+    position: relative;
+    &:hover {
+      transform: translateY(-2px);
+    }
+
+    // line animations apply to immediate first span
+    &:before,
+    &:after,
+    > a:before,
+    > a:after {
+      content: '';
+      position: absolute;
+      display: block;
+    }
+
+    // left and right lines
+    &:before,
+    > a:before {
+      width: 2px;
+      height: 0;
+    }
+    // left line
+    &:before {
+      top: 0;
+      left: 0;
+      background: linear-gradient(
+        to bottom,
+        var(--gold) 0%,
+        var(--orange) 50%,
+        var(--red) 100%
+      );
+    }
+    // right line
+    > a:before {
+      bottom: 0;
+      right: 0;
+      background: linear-gradient(
+        to top,
+        var(--gold) 0%,
+        var(--orange) 50%,
+        var(--red) 100%
+      );
+    }
+    // top and bottom lines
+    &:after,
+    > a:after {
+      height: 2px;
+      width: 0;
+    }
+    // top line
+    &:after {
+      top: 0;
+      left: 0;
+      background: linear-gradient(
+        to right,
+        var(--gold) 0%,
+        var(--orange) 50%,
+        var(--red) 100%
+      );
+    }
+    // bottom line
+    > a:after {
+      bottom: 0;
+      right: 0;
+      background: linear-gradient(
+        to left,
+        var(--gold) 0%,
+        var(--orange) 50%,
+        var(--red) 100%
+      );
+    }
+    // animate lines on hover
+    &:hover {
+      &:before,
+      > a:before,
+      &:after,
+      > a:after {
+        transition: $cubic 1s;
+      }
+      // left line
+      &:before {
+        animation: to-bottom $cubic 1s 0.05s forwards;
+      }
+      // right line
+      > a:before {
+        animation: to-top $cubic 1s 0.1s forwards;
+      }
+      // top line
+      &:after {
+        animation: to-right $cubic 1s 0.15s forwards;
+      }
+      // bottom line
+      > a:after {
+        animation: to-left $cubic 1s 0.2s forwards;
+      }
+    }
+    &:hover:before,
+    &:hover > a:before {
+      height: 100%;
+    }
+    &:hover:after,
+    &:hover > a:after {
+      width: 100%;
+    }
+  }
+
+  @keyframes to-bottom {
+    to {
+      transform: translateY(100%);
+    }
+  }
+  @keyframes to-top {
+    to {
+      transform: translateY(-100%);
+    }
+  }
+  @keyframes to-left {
+    to {
+      transform: translateX(-101%);
+    }
+  }
+  @keyframes to-right {
+    to {
+      transform: translateX(101%);
+    }
   }
 }
 
 @media (min-width: 1025px) {
-  .desktop-nav a {
+  .desktop-nav li a {
     font-size: 3rem;
   }
 }
 
-// #nav-bar {
-//   opacity: 0;
-//   display: inline-flex;
-//   flex-direction: row;
-//   justify-content: space-around;
-//   align-items: center;
-//   width: 100%;
-//   margin: auto;
-//   transition: opacity 2s linear;
-// }
-
-// .menu-container {
-//   display: flex;
-//   flex-direction: row;
-// }
-
-// /* The hamburger menu overlay */
-// .overlay {
-//   height: 0;
-//   width: 100%;
-//   position: fixed;
-//   z-index: 3;
-//   left: 0;
-//   top: 0;
-//   background-color: rgb(255, 255, 255);
-//   background-color: rgba(255, 255, 255, 0.95);
-//   overflow: hidden;
-//   transition: 1s;
-// }
-
-// /* Position the content inside the overlay */
-// .overlay-content {
-//   position: relative;
-//   display: flex;
-//   flex-direction: column;
-//   width: 100%;
-//   text-align: left;
-// }
-
-// /* The navigation links inside the overlay */
-// .overlay a {
-//   padding: 8px;
-//   text-decoration: none;
-//   font-size: 3.5em;
-//   line-height: 1em;
-//   font-weight: 800;
-//   color: var(--black);
-// }
-
-// .overlay a:hover,
-// .overlay a:focus {
-//   color: var(--orange);
-// }
-
-// /* When the height of the screen is less than 450 pixels, change the font-size of the links so they don't overlap */
-// @media screen and (max-height: 450px) {
-//   .overlay a {
-//     font-size: 20px;
-//   }
-// }
-
-// .menu-icon {
-//   position: absolute;
-//   top: 0px;
-//   right: 0px;
-//   width: 80px;
-//   height: 80px;
-//   cursor: pointer;
-//   z-index: 8;
-// }
-
-// .hamburger {
-//   position: absolute;
-//   background: var(--white);
-//   top: 50%;
-//   left: 50%;
-//   width: 50px;
-//   height: 6px;
-//   transform: translate(-50%, -50%);
-//   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-//   transition: 0.8s;
-// }
-
-// .hamburger:before,
-// .hamburger:after {
-//   content: '';
-//   position: absolute;
-//   background: var(--white);
-//   width: 50px;
-//   height: 6px;
-//   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-//   transition: 0.8s, transform 1s cubic-bezier(0.51, -0.91, 0.24, 1.16);
-//   z-index: 8;
-// }
-
-// .hamburger:before {
-//   top: -16px;
-//   right: 0px;
-// }
-
-// .hamburger:after {
-//   top: 16px;
-//   right: 0px;
-// }
-
-// .hamburgertext {
-//   position: absolute;
-//   justify-content: space-between;
-//   font-family: Roboto, sans-serif;
-//   font-size: 1em;
-//   font-weight: 800;
-//   color: var(--white);
-//   top: 65px;
-//   right: 15.5px;
-//   transition: 0.8s;
-//   text-align: center;
-//   width: 50px;
-//   letter-spacing: 0.1em;
-// }
-
-// .menu-icon:hover .hamburgertext {
-//   color: var(--orange);
-// }
-
-// .menu-icon:hover .hamburger,
-// .menu-icon:hover .hamburger:before,
-// .menu-icon:hover .hamburger:after {
-//   background: var(--orange);
-// }
-
-// .menu-icon.active .hamburger {
-//   background: rgba(0, 0, 0, 0);
-//   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0);
-// }
-
-// .menu-icon.active .hamburger:before {
-//   transform: rotate(405deg);
-//   top: 0;
-// }
-
-// .menu-icon.active .hamburger:after {
-//   transform: rotate(-405deg);
-//   top: 0;
-// }
-
-// .menu-items {
-//   display: none;
-// }
+@media (min-width: 1350px) {
+  .desktop-nav li a {
+    font-size: 4rem;
+  }
+}
