--- a/src/containers/Main/Main.module.scss
+++ b/src/containers/Main/Main.module.scss
@@ -1,10 +1,12 @@
 .Main {
   position: relative;
-  margin-top: 60px;
+  top: 60px;
+  // margin-top: 60px;
 }
 
 @media (min-width: 769px) {
   .Main {
-    margin-top: 100px;
+    top: 100px;
+    // margin-top: 100px;
   }
 }
