--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -2,7 +2,7 @@
   width: 100%;
   top: 0;
   right: 0;
-  position: relative;
+  position: fixed;
   z-index: 2;
   opacity: 0;
   transition: opacity 2s linear;
@@ -10,11 +10,10 @@
 
 @media (min-width: 769px) {
   .site-header {
-    position: fixed;
     padding: 20px 0px;
     display: flex;
     justify-content: space-evenly;
     transition: opacity 2s linear;
-    background: var(--black-zero);
+    background: var(--black-eightyfive);
   }
 }
