--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@
   --black: rgba(0, 0, 0, 1);
   --black-zero: rgba(0, 0, 0, 0);
   --black-twenty: rgba(0, 0, 0, 0.2);
+  --black-eightyfive: rgba(0, 0, 0, 0.85);
   --red: rgba(253, 94, 83, 1);
   --grey: rgba(200, 200, 200, 1);
   --grey-zero: rgba(200, 200, 200, 0);
