--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -5,11 +5,12 @@
 
 .contactInfo {
   position: relative;
-  top: 25vh;
+  top: 35vh;
   font-size: 2rem;
   font-weight: 800;
   color: var(--orange);
   line-height: 1;
+  text-align: center;
 }
 
 .contactInfo div {
@@ -20,8 +21,44 @@
   color: var(--gold);
   text-decoration: none;
 }
+
+.underline-animation {
+  position: relative;
+}
+
+.underline-animation:after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  display: block;
+  margin-top: 5px;
+  right: 0;
+  background: -webkit-linear-gradient(right, var(--orange), var(--gold));
+  transition: width 0.3s ease;
+  -webkit-transition: width 0.3s ease;
+}
+
+.underline-animation:hover:after {
+  width: 100%;
+  left: 0;
+  background: -webkit-linear-gradient(right, var(--orange), var(--gold));
+}
+
+@media (min-width: 500px) {
+  .contactInfo {
+    font-size: 3.5rem;
+  }
+}
+
+@media (min-width: 769px) {
+  .contactInfo {
+    font-size: 4rem;
+  }
+}
+
 @media (min-width: 1025px) {
   .contactInfo {
-    font-size: 3rem;
+    font-size: 5rem;
   }
 }
