--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -3,8 +3,9 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 90vw;
-  margin: 60px auto 50px auto;
+  margin: 80px auto 0px auto;
   justify-content: center;
+  padding-bottom: 80px;
 }
 
 .projectContainer {
@@ -195,7 +196,7 @@
 @media (min-width: 600px) {
   #projects-content {
     width: 85vw;
-    margin: 15px auto 50px auto;
+    margin: 100px auto 0px auto;
   }
 
   .projectContainer {
@@ -229,5 +230,11 @@
 
   .viewProject {
     font-size: 1.8rem;
+  }
+}
+
+@media (min-width: 1025px) {
+  #projects-content {
+    margin: 120px auto 0px auto;
   }
 }
