--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -1,4 +1,3 @@
-// Skills Content Formatting
 $transition-delay: 0.5s;
 $transition-delay-step: 0.15s;
 
@@ -7,13 +6,14 @@ $transition-delay-step: 0.15s;
   flex-direction: column;
   justify-content: center;
   width: 95%;
-  margin: auto auto 80px auto;
+  margin: auto;
+  padding-bottom: 80px;
 }
 
 .chart-wrapper {
   width: 80%;
   height: 30vh;
-  margin: 50px auto 80px auto;
+  margin: 80px auto 100px auto;
   display: flex;
 }
 
@@ -47,67 +47,27 @@ $transition-delay-step: 0.15s;
   font-size: 1.2rem;
 }
 
-.w-100 {
-  width: 100%;
-}
-.position-relative {
+.chart-skill {
   position: relative;
 }
-.position-absolute {
+
+.chart-skill-text {
   position: absolute;
+  width: 100%;
 }
 
-.window-opened .chart-skills li:nth-child(odd) {
+.chart-skills li:nth-child(odd) {
   background: linear-gradient(to top, var(--gold), var(--orange));
 }
 
-.window-opened .chart-skills li:nth-child(even) {
+.chart-skills li:nth-child(even) {
   background: linear-gradient(to bottom, var(--gold), var(--orange));
 }
 
-.window-opened .chart-skills li:nth-child(1) {
-  height: 80%;
-  transition-delay: $transition-delay;
-}
-
-.window-opened .chart-skills li:nth-child(2) {
-  height: 75%;
-  transition-delay: $transition-delay + $transition-delay-step;
-}
-
-.window-opened .chart-skills li:nth-child(3) {
-  height: 50%;
-  transition-delay: $transition-delay + $transition-delay-step * 2;
-}
-
-.window-opened .chart-skills li:nth-child(4) {
-  height: 10%;
-  transition-delay: $transition-delay + $transition-delay-step * 3;
-}
-
-.window-opened .chart-skills li:nth-child(5) {
-  height: 5%;
-  transition-delay: $transition-delay + $transition-delay-step * 4;
-}
-
-.window-opened .chart-skills li:nth-child(6) {
-  height: 55%;
-  transition-delay: $transition-delay + $transition-delay-step * 5;
-}
-
-.window-opened .chart-skills li:nth-child(7) {
-  height: 40%;
-  transition-delay: $transition-delay + $transition-delay-step * 6;
-}
-
-.window-opened .chart-skills li:nth-child(8) {
-  height: 15%;
-  transition-delay: $transition-delay + $transition-delay-step * 7;
-}
-
-.window-opened .chart-skills li:nth-child(9) {
-  height: 80%;
-  transition-delay: $transition-delay + $transition-delay-step * 8;
+@for $i from 1 through 9 {
+  .chart-skills li:nth-child(#{$i}n) {
+    transition-delay: #{$transition-delay + $transition-delay-step * $i - 1};
+  }
 }
 
 // only show in larger screen
@@ -123,7 +83,7 @@ $transition-delay-step: 0.15s;
   } */
 
 .chart-skills span {
-  bottom: 15px;
+  bottom: 10px;
   left: 5px;
   transform: translateY(40px) rotate(45deg);
 }
@@ -159,7 +119,7 @@ $transition-delay-step: 0.15s;
 
 @media (min-width: 500px) {
   .chart-skills span {
-    bottom: 10px;
+    bottom: 5px;
   }
 }
 
@@ -169,7 +129,7 @@ $transition-delay-step: 0.15s;
   }
 
   .chart-skills span {
-    bottom: 5px;
+    bottom: 0px;
     left: 0;
   }
 
@@ -185,7 +145,7 @@ $transition-delay-step: 0.15s;
 @media (min-width: 769px) {
   .chart-wrapper {
     width: 90%;
-    margin: 50px auto 100px auto;
+    margin: 80px auto 120px auto;
   }
 
   .chart-skills span {
@@ -210,5 +170,12 @@ $transition-delay-step: 0.15s;
   }
   .otherSkills li {
     font-size: 2rem;
+  }
+}
+
+@media (min-width: 1350px) {
+  .chart-wrapper {
+    width: 90%;
+    margin: 120px auto 120px auto;
   }
 }
