--- a/src/containers/Header/Menu/Menu.scss
+++ b/src/containers/Header/Menu/Menu.scss
@@ -90,7 +90,7 @@ $cubic: cubic-bezier(0.19, 1, 0.22, 1);
 
   // Menu animation
 
-  .underline-animation {
+  .menu-animation {
     overflow: hidden;
     position: relative;
     &:hover {
