--- a/src/containers/Main/Main.module.scss
+++ b/src/containers/Main/Main.module.scss
@@ -1,12 +1,13 @@
 .Main {
   position: relative;
-  top: 20px;
-  // margin-top: 60px;
+  // top: 20px;
+  min-height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  min-height: calc(var(--vh, 1vh) * 100);
 }
 
 @media (min-width: 769px) {
   .Main {
-    top: 120px;
-    // margin-top: 100px;
+    // top: 120px;
+    min-height: calc(var(--vh, 1vh) * 100);
   }
 }
