--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@
   --black-twenty: rgba(0, 0, 0, 0.2);
   --black-eightyfive: rgba(0, 0, 0, 0.85);
   --red: rgba(253, 94, 83, 1);
+  --light-grey: rgba(20, 20, 20, 1);
   --grey: rgba(200, 200, 200, 1);
   --grey-zero: rgba(200, 200, 200, 0);
   --grey-fifty: rgba(200, 200, 200, 0.5);
@@ -34,9 +35,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: var(--black);
-  /* overflow: hidden; */
-  transition: background-color 2s linear;
-  -webkit-transition: background-color 2s cubic-bezier(0.66, 0.01, 0.99, 0.2);
+  // overflow: hidden;
+  // transition: background-color 2s linear;
+  // -webkit-transition: background-color 2s cubic-bezier(0.66, 0.01, 0.99, 0.2);
   color: var(--white);
 }
 
