adding custom cursor to contact page

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,9 +27,9 @@
 
 //global classes
 
-.cursor {
-  display: none;
-}
+// .cursor {
+//   display: none;
+// }
 
 .windowHeader {
   background: #ddd;
