changed eventListener from arrow function to plain funciton call

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,9 +27,9 @@
 
 //global classes
 
-// .cursor {
-//   display: none;
-// }
+.cursor {
+  opacity: 0;
+}
 
 .windowHeader {
   background: #ddd;
