added call to action  button on Intro, re-ordered projects, resized hamburger bars

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,9 @@
   --bodyFont: 'Roboto', Helvetica;
   --red: rgba(253, 94, 83, 1);
   --orange: rgba(252, 156, 84, 1);
+  --orange-fifty: rgba(252, 156, 84, 0.5);
   --gold: rgba(255, 227, 115, 1);
+  --gold-fifty: rgba(255, 227, 115, 0.5);
   --white: rgba(255, 255, 255, 1);
   --black: rgba(0, 0, 0, 1);
   --black-zero: rgba(0, 0, 0, 0);
