--- a/src/components/Intro/Intro.module.scss
+++ b/src/components/Intro/Intro.module.scss
@@ -1,6 +1,6 @@
 .Intro {
   position: relative;
-  top: 40vh;
+  top: 35vh;
   left: 50%;
   text-align: center;
   transform: translate3d(-50%, 0, 0);
@@ -74,10 +74,41 @@
 //   animation-play-state: paused;
 // }
 
+.Intro a {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 150px;
+  margin: auto;
+  width: fit-content;
+  background: var(--orange);
+  background: linear-gradient(to right, var(--gold), var(--orange));
+  color: rgba(0, 0, 0, 1);
+  font-size: 2rem;
+  line-height: 1;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 30px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 4px 2px rgba(255, 255, 255, 0.5);
+  z-index: 2;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  &:hover {
+    box-shadow: 0px 0px 4px 2px var(--gold);
+    transform: scale(1.03);
+  }
+}
+
 @media (min-width: 400px) {
   .Intro span,
   .Intro li {
     font-size: 4rem;
+  }
+  .Intro a {
+    top: 180px;
+    font-size: 2.4rem;
   }
 }
 
@@ -88,6 +119,10 @@
   .Intro span,
   .Intro li {
     font-size: 6rem;
+  }
+  .Intro a {
+    top: 220px;
+    font-size: 3rem;
   }
 }
 
