added a project component

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -52,6 +52,8 @@
 .contactInfo {
   position: relative;
   top: 45vh;
+  width: fit-content;
+  margin: auto;
   font-size: 2rem;
   font-weight: 800;
   color: var(--orange);
