--- a/src/components/Intro/Intro.module.scss
+++ b/src/components/Intro/Intro.module.scss
@@ -91,12 +91,12 @@
   text-decoration: none;
   padding: 15px 30px;
   border-radius: 5px;
-  box-shadow: 0px 0px 4px 2px rgba(255, 255, 255, 0.5);
+  // box-shadow: 0px 0px 4px 2px rgba(255, 255, 255, 0.5);
   z-index: 2;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
   &:hover {
-    box-shadow: 0px 0px 4px 2px var(--gold);
+    // box-shadow: 0px 0px 4px 2px var(--gold);
     transform: scale(1.03);
   }
 }
