added burger project, removed portfolio

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -171,6 +171,10 @@
   background-image: url('../../assets/images/projects/bishop.png');
 }
 
+.burger {
+  background-image: url('../../assets/images/projects/burger.png');
+}
+
 .gatesVacation {
   background-image: url('../../assets/images/projects/gates.png');
 }
