--- a/src/components/Projects/Project/Project.scss
+++ b/src/components/Projects/Project/Project.scss
@@ -77,6 +77,10 @@
   cursor: pointer;
   padding: 10px;
   filter: drop-shadow(0px 0px 8px rgba(255, 255, 255, 0.5));
+  transition: all 0.3s ease-in-out;
+  &:hover {
+    filter: drop-shadow(0px 0px 14px rgba(255, 255, 255, 0.5));
+  }
 }
 
 .start-row {
@@ -94,6 +98,11 @@
   text-align: center;
   color: var(--black);
   cursor: pointer;
+  box-shadow: 0px 0px 0px 0px rgba(255, 255, 255, 0.5);
+  transition: all 0.3s ease-in-out;
+  &:hover {
+    box-shadow: 0px 0px 8px 4px rgba(255, 255, 255, 0.5);
+  }
 }
 
 @media (min-width: 769px) {
