--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -175,6 +175,10 @@
   background-image: url('../../assets/images/projects/burger.png');
 }
 
+.audioDB {
+  background-image: url('../../assets/images/projects/audioDB.png');
+}
+
 .gatesVacation {
   background-image: url('../../assets/images/projects/gates.png');
 }
