--- a/src/index.scss
+++ b/src/index.scss
@@ -27,6 +27,28 @@
 
 html {
   font-size: 10px;
+  scrollbar-color: var(--orange) var(--black);
+  scrollbar-width: thin;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: linear-gradient(90deg, #201c29, #201c29 1px, #100e17 0, #100e17);
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, var(--red), var(--orange), var(--gold));
+  border-radius: 5px;
+  box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, 0.25),
+    inset -2px -2px 2px rgba(0, 0, 0, 0.25);
+  cursor: grab;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, var(--orange), var(--orange));
 }
 
 body {
@@ -37,9 +59,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: var(--black);
-  // overflow: hidden;
-  // transition: background-color 2s linear;
-  // -webkit-transition: background-color 2s cubic-bezier(0.66, 0.01, 0.99, 0.2);
   color: var(--white);
 }
 
