--- a/src/containers/Footer/Footer.scss
+++ b/src/containers/Footer/Footer.scss
@@ -1,12 +1,12 @@
 footer {
   display: flex;
-  // position: relative;
   position: absolute;
   bottom: 0;
   width: 100%;
 }
 
 .social-icons {
+  visibility: hidden;
   position: absolute;
   bottom: 0px;
   width: 100%;
