--- a/src/App.scss
+++ b/src/App.scss
@@ -31,7 +31,7 @@
   background: #ddd;
   position: relative;
   border-radius: 3px 3px 0px 0px;
-
+  transition: opacity 1s ease-out, transform 1s ease-out;
   .browser-button-close,
   .browser-button-minimize,
   .browser-button-expand {
@@ -95,4 +95,5 @@
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 0px 0px 3px 3px;
+  transition: opacity 1s ease-out;
 }
