--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -36,7 +36,8 @@
 
 .watermark {
   position: absolute;
-  color: rgba(255, 255, 255, 0.05);
+  // color: rgba(255, 255, 255, 0.05);
+  color: rgba(0, 0, 0, 1);
   top: 45vh;
   left: 0;
   right: 0;
@@ -45,12 +46,14 @@
   opacity: 1;
   @include fluid-type($min-font-size: 100px, $max-font-size: 700px);
   transform: translate3D(0, -50%, 0);
-  -webkit-text-stroke: 4px rgba(255, 255, 255, 0.08);
+  // -webkit-text-stroke: 4px rgba(255, 255, 255, 0.08);
+  filter: drop-shadow(2px 2px 2px rgba(255, 255, 255, 0.1));
   cursor: none;
 }
 
 .contactInfo {
   position: relative;
+  z-index: 3;
   top: 45vh;
   width: fit-content;
   margin: auto;
