--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -11,6 +11,15 @@
 .projectContainer {
   width: 100%;
   margin: 15px;
+  // box-shadow: 0px 0px 4px 2px rgba(255, 255, 255, 0);
+  // filter: drop-shadow(0px 12px 12px rgba(255, 255, 255, 0));
+  transition: box-shadow 1s ease-in-out, transform 1s ease-in-out;
+  transform: scale(1);
+  &:hover {
+    // box-shadow: 0px 0px 12px 6px rgba(255, 255, 255, 0.5);
+    // filter: drop-shadow(0px 0px 12px rgba(255, 255, 255, 0.5));
+    transform: scale(1.03);
+  }
 }
 
 .projectContent {
