--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,4 +1,4 @@
-.Intro {
+.home-container {
   position: relative;
   top: 35vh;
   left: 50%;
@@ -6,17 +6,17 @@
   transform: translate3d(-50%, 0, 0);
 }
 
-.Intro span,
-.Intro li {
+.home-text,
+.slider-item {
   font-size: 3.25rem;
   transition: font-size 0.3s ease-in-out;
 }
 
-.Intro span {
+.home-text {
   color: var(--white);
 }
 
-.Intro ul {
+.slider {
   text-align: center;
   margin: 0 auto;
   position: relative;
@@ -25,7 +25,7 @@
   // visibility: hidden;
 }
 
-.Intro li {
+.slider-item {
   position: absolute;
   list-style: none;
   margin: auto;
@@ -45,90 +45,45 @@
   -webkit-text-fill-color: transparent;
 }
 
-// .Intro li.anim1 {
+// .slider-item.anim1 {
 //   animation: cycle 15s linear infinite;
 //   animation-delay: 2.8s;
 // }
 
-// .Intro li.anim2 {
+// .slider-item.anim2 {
 //   animation: cycle2 15s linear infinite;
 //   animation-delay: 2.8s;
 // }
 
-// .Intro li.anim3 {
+// .slider-item.anim3 {
 //   animation: cycle3 15s linear infinite;
 //   animation-delay: 2.8s;
 // }
 
-// .Intro li.anim4 {
+// .slider-item.anim4 {
 //   animation: cycle4 15s linear infinite;
 //   animation-delay: 2.8s;
 // }
 
-// .Intro li.anim5 {
+// .slider-item.anim5 {
 //   animation: cycle5 15s linear infinite;
 //   animation-delay: 2.8s;
 // }
 
-// .Intro:hover li {
+// .home-container:hover li {
 //   animation-play-state: paused;
 // }
 
-.Intro a {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 150px;
-  margin: auto;
-  width: fit-content;
-  background: var(--orange);
-  background: linear-gradient(to right, var(--gold), var(--orange));
-  color: rgba(0, 0, 0, 1);
-  font-size: 2rem;
-  line-height: 1;
-  font-weight: 700;
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 15px 30px;
-  border-radius: 5px;
-  // box-shadow: 0px 0px 4px 2px rgba(255, 255, 255, 0.5);
-  z-index: 2;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-  &:hover {
-    // box-shadow: 0px 0px 4px 2px var(--gold);
-    transform: scale(1.03);
-  }
-}
-
 @media (min-width: 400px) {
-  .Intro span,
-  .Intro li {
+  .home-text,
+  .slider-item {
     font-size: 4rem;
-  }
-  .Intro a {
-    top: 180px;
-    font-size: 2.4rem;
   }
 }
 
 @media (min-width: 769px) {
-  // .Intro {
-  //   top: 25vh;
-  // }
-  .Intro span,
-  .Intro li {
+  .home-text,
+  .slider-item {
     font-size: 6rem;
   }
-  .Intro a {
-    top: 220px;
-    font-size: 3rem;
-  }
 }
-
-// @media (min-width: 1025px) {
-//   .Intro span,
-//   .Intro li {
-//     font-size: 8rem;
-//   }
-// }
