--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -3,8 +3,9 @@
   top: 0;
   right: 0;
   position: fixed;
+  background: var(--black-zero);
   z-index: 5;
-  transition: opacity 2s linear;
+  transition: opacity 1s linear;
 }
 
 @media (min-width: 769px) {
@@ -12,7 +13,7 @@
     padding: 20px 0px;
     display: flex;
     justify-content: space-evenly;
-    transition: opacity 2s linear;
+    transition: opacity 1s linear;
     background: var(--black-eightyfive);
   }
 }
