--- a/src/index.scss
+++ b/src/index.scss
@@ -63,8 +63,11 @@ body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: var(--black);
+  background-color: var(--white);
+  // background-color: var(--black);
   color: var(--white);
+  // transition: background-color 1s var(----cubic);
+  transition: background-color 2s cubic-bezier(0.66, 0.01, 0.99, 0.2);
 }
 
 code {
