changed useEffect cleanup on all components to toggle global state of visited. updated Home animation

--- a/src/components/UI/Button/TiltButton.scss
+++ b/src/components/UI/Button/TiltButton.scss
@@ -2,12 +2,12 @@
   position: absolute;
   left: 0;
   right: 0;
-  top: 150px;
+  top: 50%;
   margin: auto;
   width: fit-content;
   background: var(--orange);
   background: linear-gradient(to right, var(--gold), var(--orange));
-  color: rgba(0, 0, 0, 1);
+  color: var(--black);
   font-size: 2rem;
   line-height: 1;
   font-weight: 700;
@@ -20,7 +20,6 @@
   will-change: transform;
   z-index: 2;
   opacity: 0;
-  // opacity: 0;
   cursor: pointer;
   &:hover {
     box-shadow: 0px 30px 100px -10px rgba(255, 255, 255, 0.4);
@@ -29,14 +28,12 @@
 
 @media (min-width: 400px) {
   .TiltButton {
-    top: 180px;
     font-size: 2.4rem;
   }
 }
 
 @media (min-width: 769px) {
   .TiltButton {
-    top: 220px;
     font-size: 3rem;
   }
 }
