--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,13 +1,20 @@
 .home-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
   position: relative;
-  top: 35vh;
-  left: 50%;
+  height: 100vh;
+  width: 100%;
   text-align: center;
-  transform: translate3d(-50%, 0, 0);
+  // background-color: white;
+  // transition: background-color 2s cubic-bezier(0.66, 0.01, 0.99, 0.2);
 }
 
 .home-text,
 .slider-item {
+  display: flex;
+  position: relative;
   font-size: 3.25rem;
   transition: font-size 0.3s ease-in-out;
 }
@@ -17,12 +24,14 @@
 }
 
 .slider {
+  display: flex;
+  justify-content: center;
   text-align: center;
   margin: 0 auto;
   position: relative;
   overflow: hidden;
-  height: 45vh;
-  // visibility: hidden;
+  height: calc(50vh + 100px);
+  width: 100%;
 }
 
 .slider-item {
@@ -30,7 +39,6 @@
   list-style: none;
   margin: auto;
   text-align: center;
-  width: 100%;
   line-height: 1.2;
   background: var(--white);
   background: -webkit-linear-gradient(
@@ -45,39 +53,19 @@
   -webkit-text-fill-color: transparent;
 }
 
-// .slider-item.anim1 {
-//   animation: cycle 15s linear infinite;
-//   animation-delay: 2.8s;
-// }
-
-// .slider-item.anim2 {
-//   animation: cycle2 15s linear infinite;
-//   animation-delay: 2.8s;
-// }
-
-// .slider-item.anim3 {
-//   animation: cycle3 15s linear infinite;
-//   animation-delay: 2.8s;
-// }
-
-// .slider-item.anim4 {
-//   animation: cycle4 15s linear infinite;
-//   animation-delay: 2.8s;
-// }
-
-// .slider-item.anim5 {
-//   animation: cycle5 15s linear infinite;
-//   animation-delay: 2.8s;
-// }
-
-// .home-container:hover li {
-//   animation-play-state: paused;
-// }
+@media (max-width: 400px) and (min-height: 800px) {
+  .slider {
+    height: calc(50vh + 100px);
+  }
+}
 
 @media (min-width: 400px) {
   .home-text,
   .slider-item {
     font-size: 4rem;
+  }
+  .slider {
+    height: calc(50vh + 120px);
   }
 }
 
