--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -247,9 +247,9 @@
     max-width: 22%;
   }
 
-  .projectSkills li {
-    font-size: 1.8rem;
-  }
+  // .projectSkills li {
+  //   font-size: 1.4rem;
+  // }
 
   .viewProject {
     font-size: 2.2rem;
