--- a/src/App.scss
+++ b/src/App.scss
@@ -90,10 +90,16 @@
 
 .preview {
   width: 100%;
-  height: 30vh;
+  height: 20rem;
   background-position: center top;
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 0px 0px 3px 3px;
   transition: opacity 1s ease-out;
+}
+
+@media (min-width: 600px) {
+  .preview {
+    height: 25rem;
+  }
 }
