--- a/src/App.scss
+++ b/src/App.scss
@@ -90,7 +90,8 @@
 
 .preview {
   width: 100%;
-  height: 20rem;
+  height: 31vh;
+  min-height: 20rem;
   background-position: center top;
   background-size: cover;
   background-repeat: no-repeat;
@@ -100,6 +101,6 @@
 
 @media (min-width: 600px) {
   .preview {
-    height: 25rem;
+    min-height: 25rem;
   }
 }
