added chiggy bank

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -180,6 +180,10 @@
   background-image: url('../../assets/images/projects/bishop.png');
 }
 
+.chiggybank {
+  background-image: url('../../assets/images/projects/chiggybank.png');
+}
+
 .burger {
   background-image: url('../../assets/images/projects/burger.png');
 }
